--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -28,4 +29,6 @@ dependencies {
 
     // permission Management
     implementation 'pub.devrel:easypermissions:2.0.1'
+
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
